Fixs and more questions answered

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cstdlib": "cpp",
     "iostream": "cpp",
     "ostream": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "algorithm": "cpp"
   }
 }
